--- a/AmbientReminders/src/controllers/web/views/index.jade
+++ b/AmbientReminders/src/controllers/web/views/index.jade
@@ -5,6 +5,9 @@ block content
   h2 Welcome to #{title}
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
+  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
+  
   <br/>
   <br/>
   <br/>
@@ -27,3 +30,4 @@ block content
         strong.col-md-12 30-min solid reminder: 
         div.col-md-12
           input(type= "submit", value= "Solid" class="btn btn-warning col-md-12" formaction="/Blink/solid")
+    
