Redirecting to the first page after each action

--- a/AmbientReminders/src/controllers/web/views/index.jade
+++ b/AmbientReminders/src/controllers/web/views/index.jade
@@ -30,4 +30,4 @@ block content
         strong.col-md-12 30-min solid reminder: 
         div.col-md-12
           input(type= "submit", value= "Solid" class="btn btn-warning col-md-12" formaction="/Blink/solid")
-    
+       // input#interval(type="text", name="user" class="col.md-12" default="hi")
