'off' button is basically doing alarm.onEnd() now.

--- a/AmbientReminders/src/controllers/web/views/index.jade
+++ b/AmbientReminders/src/controllers/web/views/index.jade
@@ -14,7 +14,7 @@ block content
   
   form(name= "Blink1", method= "post" class="container-fluid")
     div.col-xs-4
-        strong.col-md-12 Click a button to choose color: 
+        strong.col-md-12 Click a button to choose a color or turn off the led: 
         div.col-mid-12
           input(type= "submit", value= "Red" class="btn btn-danger col-md-3" formaction="/Blink/onRed")
           input(type= "submit", value= "Green" class="btn btn-success col-md-3" formaction="/Blink/onGreen")
